# timelight

./: .clang-format  .gitignore  README.md  TODO  timelight.example.toml
scripts/: build.sh  hotbuild.sh
src/: CMakeLists.txt  main.cpp
src/adapter/: CMakeLists.txt  abstract_adapter.hpp  terminal_adapter.cpp  terminal_adapter.hpp
src/app/: CMakeLists.txt  config.cpp  config.hpp
src/light/: CMakeLists.txt  light_element.cpp  light_element.hpp  light_matrix.cpp  light_matrix.hpp
